ref: Properties States